--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,73 @@
   stroke-dasharray: 125.6;
   transform: rotate(-90deg);
 }
+
+.data-\[state\=checked\]\:bg-primary[data-state="checked"]{
+  background-color:#17C788 !important; 
+  color: #fff;
+}
+
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+  }
+  .container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  }
+  .custom-file-input {
+  width: 100%;
+ 
+  }
+  .custom-file-input::before {
+  content: "Drag and Drop to Add Photo (770 x 390)";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px;
+  background-color: #F9FCF5;
+  border: 2px solid #17C788;
+  border-radius: 3px;
+  border-style: dashed;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 700;
+  font-size: 10pt;
+  }
+  .custom-file-input:hover::before {
+  border-color: var(--green);
+  }
+  .custom-file-input:active::before {
+  background-color:  #F9FCF5;
+  }
+
+  .preview-container{
+      width: 100%;
+      display: flex;
+      gap: 1rem;
+      justify-content: flex-start;
+      align-items: center;
+      flex-wrap: wrap;
+      margin-top: 1rem;
+  }
+
+  .preview-remove{
+      border: none;
+      border-radius: 20px;
+      background-color: var(--text-siler);
+  }
+
+  .imageFile{
+      width: 100px;
+      height: 100px;
+  }
+
+  .image-preview{
+      display: flex;
+      gap: .2rem;
+      align-items: flex-start;
+      flex-direction: column;
+  }
